--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Prac2">
         <activity
+            android:name=".MessageGroup"
+            android:exported="false" />
+        <activity
             android:name=".ListActivity"
             android:exported="true">
             <intent-filter>
